# stacksearch

./: .atom-build.yml  .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  Makefile  README.md  Test_main.py  __main__.py  bot-tester-requirements.txt  conf.py  dev-requirements.txt  index.rst  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_main.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  format.yml  greetings.yml  python-check.yml  python-publish.yml  sync.yml
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/docs/: quickstart.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
_build/html/_static/: documentation_options.js
docs/: api_ref.rst  conf.py  index.rst  quickstart.rst  requirements.txt  semi-docs\quickstart.html
docs/docs/: quickstart.rst  stacksearch.rst  using-the-api.rst
docs/semi-docs/: quickstart.md  quickstart.rst
documentation/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
documentation/.doctrees/: environment.pickle  index.doctree
documentation/_sources/: index.rst.txt
documentation/_static/: documentation_options.js
documentation/docs/: api-ref.html  quickstart.html
scripts/: stacksearch
stacksearch/: Search.py  __init__.py  __main__.py  errors.py  main.py  reverse_markdown.py  search.py  stacksearch  txt_req.json
stacksearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_Search.py  test_main.py
(+47 files in other folders)
