[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stacksearch"
version = "2"
license = "MIT"
description = "StackSearch is a python CLI and library that provides a way to search StackExchange sites."
authors = [ "Bryan Hu <bryan.hu.2020@gmail.com>",]
readme = "README.md"
documentation = "https://stacksearch.readthedocs.io/en/latest/index.html"
keywords = [ "stackexchange", "webscrape", "api",]
classifiers = [ "Programming Language :: Python :: Implementation :: CPython", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Intended Audience :: End Users/Desktop", "Intended Audience :: Information Technology", "Intended Audience :: Science/Research", "Intended Audience :: System Administrators", "Environment :: Console", "Natural Language :: English", "Topic :: Utilities",]
include = ["README.md", "LICENSE"]

[tool.poetry.scripts]
stacksearch = "stacksearch.__main__:main"

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9.3"
aiohttp = "^3.7.3"
rich = "^9.11.0"
unmarkd = "^0.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
mypy = "^0.790"
black = "^20.8b1"
pytest = "^6.2.1"
isort = "^5.7.0"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"
toml = "^0.10.2"
Sphinx = "^3.4.2"
frosch = "^0.1.7"
